[package]
name = "lithia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
memmap2 = "0.5.7"
#nohash-hasher = "0.2.0"
ahash = "0.8.0"
# to format ast prettily
textwrap = "0.15.0"